k8s/ingress/landing-page-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landingpage-apps
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: landing-service.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-svc
            port:
              number: 80
